Replace string and image variables.

--- a/WeatherApp/en.lproj/Localizable.strings
+++ b/WeatherApp/en.lproj/Localizable.strings
@@ -6,5 +6,7 @@
   
 */
 
-"TITLE" = "Title";
-"DESP" = "Description";
+"DETAILS.TIME" = "TIME";
+"DETAILS.UV" = "UV";
+"DETAILS.RAIN" = "% RAIN";
+"DETAILS.AQ" = "AQ";
