Create universal API by using Alamofire for get JSON data from the server. Upload all weather icons and implement them in enum Icon. Add days of week in Localization. Add Date initializer from String. Add func addCityName from coordinates to InformationView. Add models: WeatherModel and CityModel. Add request for getWeatherData in MainViewModel. Create CityData, add var domain in WeatherData and CityData. Update CityCompletionView to use array of CityModel.

--- a/WeatherApp/uk.lproj/Localizable.strings
+++ b/WeatherApp/uk.lproj/Localizable.strings
@@ -11,3 +11,10 @@
 "DETAILS.RAIN" = "ОПАДИ";
 "DETAILS.AQ" = "ЯП";
 "SEARCH.SEARCHLOCATION" = "Пошук";
+"SUNDAY" = "Неділя";
+"MONDAY" = "Понеділок";
+"TUESDAY" = "Вівторок";
+"WEDNESDAY" = "Середа";
+"THURSDAY" = "Четвер";
+"FRIDAY" = "Пʼятниця";
+"SATURDAY" = "Субота";
