--- a/WeatherApp/en.lproj/Localizable.strings
+++ b/WeatherApp/en.lproj/Localizable.strings
@@ -11,3 +11,10 @@
 "DETAILS.RAIN" = "RAIN";
 "DETAILS.AQ" = "AQ";
 "SEARCH.SEARCHLOCATION" = "Search Location";
+"SUNDAY" = "Sunday";
+"MONDAY" = "Monday";
+"TUESDAY" = "Tuesday";
+"WEDNESDAY" = "Wednesday";
+"THURSDAY" = "Thursday";
+"FRIDAY" = "Friday";
+"SATURDAY" = "Saturday";
