Add delete alert. Add AppIcon.

--- a/WeatherApp/en.lproj/Localizable.strings
+++ b/WeatherApp/en.lproj/Localizable.strings
@@ -18,3 +18,7 @@
 "THURSDAY" = "Thursday";
 "FRIDAY" = "Friday";
 "SATURDAY" = "Saturday";
+"ALERT.ATTENTION" = "Attention!";
+"ALERT.QUESTION" = "Are you sure you want to delete this city?";
+"ALERT.CANCEL" = "Cancel";
+"ALERT.DELETE" = "Delete";
